# poolula-platform

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  EXECUTIVE_SUMMARY.md  README.md  README_updated-v1.md  README_updated-v2.md  README_updated-v3.md  mkdocs.yml  pyproject.toml
alembic/: env.py
alembic/versions/: fcf071ccc323_initial_schema_property_transaction_.py
apps/api/: __init__.py  main.py
apps/api/routes/: chat.py  properties.py
apps/chatbot/: __init__.py  ai_generator.py  app.py  audit_logger.py  cache_manager.py  config.py  database_tool.py  document_processor.py  health_check.py  metadata_manager.py  models.py  performance_monitor.py  rag_system.py  search_tools.py  vector_store.py
apps/chatbot/llm_providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
apps/dspy/: __init__.py  artifacts.py  lm_config.py  pipelines.py  retrievers.py  runtime.py  signatures.py
apps/evaluator/: airbnb_eval_set.jsonl  airbnb_ground_truth.py  dataset_manifest.py  dspy_dataset.py  dspy_metrics.py  eval_report.json  export_eval_pdf.py  numerical_validator.py  poolula_eval_set.jsonl
core/: __init__.py  logging_config.py
core/database/: __init__.py  connection.py  enums.py  models.py
data/: document_metadata.csv  poolula_facts.yml
data/templates/: README.md  airbnb_template.csv  expenses_template.csv
docs/: dspy-mlflow-plan-2025-12-09.md  dspy-mlflow-plan.md  faq.md  index.md  phase2-week4-summary.md  sample-questions.md
docs/api/: chat.md  documents.md  obligations.md  overview.md  properties.md  transactions.md
docs/architecture/: api-design.md  business-objects.md  data-models.md  llm-providers.md  platform-interfaces.md  quick-reference.md  system-design.md
docs/evaluation/: harness-brief-for-executives.md  harness.md  index.md  provider-comparison.md  provider_checklist.md  questions.md  results.md  roadmap.md  scoring.md
docs/getting-started/: dspy-mlflow-quickstart.md  installation.md  overview.md  quick-start.md
docs/planning/: 2025-11-13-architecture-analysis.md  2025-11-13-revised-implementation-plan.md  2025-12-03-llm-agnosticism-plan.md  dspy-mlflow-plan.md  implementation-plan-2024-11-14.md  openai-provider-implementation-guide.md  openai-provider-learnings-summary.md  phase-4-completion-summary.md
docs/stylesheets/: extra.css
docs/testing/: deployment.md  migrations.md  testing.md
docs/user-guide/: chatbot.md  document-management.md  importing-data.md  obligations.md
docs/workflows/: airbnb-import.md  api-usage.md  data-import.md  dspy-usage.md  llm-provider-setup.md  testing.md
frontend/: index.html  resources.md  script.js  style.css
scripts/: backup.py  build_dspy_artifact.py  cli.py  detect_dspy_regression.py  dspy_mlflow_run.py  eval_dspy_vs_baseline.py  evaluate_airbnb.py  evaluate_chatbot.py  evaluate_providers.py  import_airbnb_transactions.py  ingest_documents.py  make_dummy_dspy_artifact.py  optimize_dspy_pipeline.py  remove_duplicate_transactions.py  seed_database.py  seed_obligations.py  test_dspy_basic.py  test_dspy_tools.py  verify_airbnb_import.py
tests/: conftest.py  test_api_properties.py  test_models.py
tests/chatbot/: conftest.py  test_ai_generator_integration.py  test_course_search_tool.py  test_document_processor.py  test_rag_system.py  test_session_manager.py
